Update Configuration for My Ender3

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1768
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -33,6 +33,9 @@ extra_configs =
     ini/stm32g0.ini
     ini/teensy.ini
     ini/renamed.ini
+
+# The 'common' section applies to most Marlin builds.
+upload-port  = E:\
 
 #
 # The 'common' section applies to most Marlin builds.
